# oneshop

./: LICENSE  README.md  oneshop.postman_collection.json  pyproject.toml
config/: settings.py  urls.py
shop/: admin.py  models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_product.py  0003_cart.py
users/: admin.py  models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
